# origin

Kursovaya 3/Project1/: Project1.sln
Kursovaya 4/Project1/: Project1.sln
Lesson 1/Task 1/: Task 1.sln
Lesson 1/Task 2/: Task 2.sln
Lesson 1/Task 3/: ConsoleApplication3.sln
Lesson 10/DynamicCMake/: CMakeLists.txt  ConsoleApplication.cpp  Leaver.cpp  Leaver.h
Lesson 10/StatisClass/: StatisClass.sln
Lesson 11/Project1/: Project1.sln
Lesson 11/Project2/: Project2.sln
Lesson 12/: main.cpp
Lesson 13/: main.cpp
Lesson 14/: CMakeLists.txt  main.cpp
Lesson 16/Project1/: Project1.sln
Lesson 16/Project2/: Project2.sln
Lesson 17/Project2/: Project2.sln
Lesson 18/Project1/: Project1.sln
Lesson 18/Project2/: Project2.sln
Lesson 19/Project1/: Project1.sln
Lesson 19/Project2/: Project2.sln
Lesson 20/: CMakeLists.txt  source.cpp  sqlpr.txt
Lesson 21/Project1/: Project1.sln
Lesson 21/Project2/: Project2.sln
Lesson 22/Project1/: Project1.sln
Lesson 22/Project2/: Project2.sln
Lesson 23/Project1/: Project1.sln
Lesson 23/Project2/: Project2.sln
Lesson 23/Project3/: Project3.sln
Lesson 24/Project1/: Project1.sln
Lesson 24/Project2/: Project2.sln
Lesson 25/Project1/: Project1.sln
Lesson 26/Project1/: Project1.sln
Lesson 26/Project2/: Project2.sln
Lesson 27/Project1/: Project1.sln
Lesson 27/Project2/: Project2.sln
Lesson 28/Project1/: Project1.sln
Lesson 30/: Doc1.docx
Lesson 30/HomeWorkSQL/HomeWorkSQL/: CMakeLists.txt  main.cpp
Lesson 9/Project 2/: CMakeLists.txt  Eq_triangle1.cpp  Exeption.h  Parallelogram1.cpp  Rec_triangle1.h  Rectangle1.h  Rhombus1.cpp  Triangle.h
test14/: client.cpp  server.cpp
(+444 files in other folders)
